--- a/app/src/main/res/layout/activity_driver_info.xml
+++ b/app/src/main/res/layout/activity_driver_info.xml
@@ -64,8 +64,10 @@
                 android:layout_below="@+id/fNameTv"
                 android:paddingTop="10dp"
                 android:hint="  Type Something"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"/>
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"
+                android:background="@drawable/rounded_corners"/>
 
             <TextView
                 android:id="@+id/lNameTv"
@@ -84,8 +86,10 @@
                 android:layout_below="@+id/lNameTv"
                 android:paddingTop="10dp"
                 android:hint="  Type Something"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"/>
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"
+                android:background="@drawable/rounded_corners"/>
 
 
             <TextView
@@ -105,8 +109,10 @@
                 android:layout_below="@+id/dobTv"
                 android:hint="  Type Something"
                 android:paddingTop="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"
+                android:background="@drawable/rounded_corners"/>
 
             <TextView
                 android:id="@+id/addressTv"
@@ -125,8 +131,10 @@
                 android:layout_below="@+id/addressTv"
                 android:hint="  Type Something"
                 android:paddingTop="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"
+                android:background="@drawable/rounded_corners"/>
 
             <TextView
                 android:id="@+id/driverLicenceTv"
@@ -145,8 +153,10 @@
                 android:layout_below="@+id/driverLicenceTv"
                 android:paddingTop="10dp"
                 android:hint="  Type Something"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"/>
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"
+                android:background="@drawable/rounded_corners"/>
 
         </RelativeLayout>
 
