--- a/app/src/main/res/layout/activity_vehicle_registration.xml
+++ b/app/src/main/res/layout/activity_vehicle_registration.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
+    android:orientation="vertical"
     android:background="@color/background"
     tools:context=".vehicleRegistration">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <include
-            layout="@layout/main_toolbar"/>
+    <include
+        layout="@layout/logintoolbar"/>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -32,7 +26,7 @@
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/relative1">
+                    >
 
 
                     <EditText
@@ -165,16 +159,3 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:color/white">
-
-        <include
-            layout="@layout/main_nav_drawer"/>
-
-
-    </RelativeLayout>
-
-</androidx.drawerlayout.widget.DrawerLayout>
