--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -77,13 +77,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:onClick="clickRegister">
+        android:onClick="clickHandBook">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Register"
+            android:text="Handbook"
             android:padding="12dp"
             android:layout_marginStart="16dp"/>
 
