--- a/app/src/main/res/layout/activity_insurance_exchange.xml
+++ b/app/src/main/res/layout/activity_insurance_exchange.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".insuranceExchange"
+    android:id="@+id/drawer_layout"
+    android:background="@color/background"
+    tools:context=".insuranceExchange">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/main_toolbar"/>
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/backgroundColor">
 
     <RelativeLayout
@@ -20,18 +34,11 @@
             android:layout_height="wrap_content">
 
 
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="249dp"
-                android:layout_height="92dp"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/app_icon_04" />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/logo"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
                 android:text=" Complete Other Driver's Insurance Information"
@@ -133,3 +140,18 @@
         </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white">
+
+        <include
+            layout="@layout/main_nav_drawer"/>
+
+
+    </RelativeLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
