--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical"
     android:layout_margin="50sp">
 
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +15,9 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:textSize="24sp"
-        android:layout_marginBottom="20sp"/>
+        android:layout_marginBottom="20sp"
+        android:visibility="visible"/>
+
 
     <TextView
         android:id="@+id/addressTextView"
@@ -21,14 +25,22 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_gravity="center_horizontal"
-        android:gravity="center"
         android:layout_marginBottom="30sp"
-        android:textSize="20sp"/>
+        android:gravity="center"
+        android:textSize="20sp"
+        android:visibility="visible" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <EditText
+            android:id="@+id/enterAddressEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter Address"
+            android:layout_above="@+id/submit_login_button"
+            android:visibility="invisible"/>
         <Button
             android:id="@+id/submit_login_button"
             android:layout_width="wrap_content"
@@ -37,6 +49,16 @@
             android:backgroundTint="@color/teal_700"
             android:onClick="saveAddress"
             android:text="@string/saveAddressButtonText"/>
+
+        <Button
+            android:id="@+id/enter_manually_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/submit_login_button"
+            android:backgroundTint="@color/teal_700"
+            android:onClick="enterManually"
+            android:text="@string/enterManuallyButtonText"/>
     </RelativeLayout>
 
 
