Updated profiles to pull and push to Firebase

--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="55dp"
                     android:layout_marginTop="25dp"
-                    android:src="@drawable/logo_01"
+                    android:src="@drawable/logo3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +55,7 @@
                     android:text="@string/editLink"
                     android:textColor="@color/logo"
                     android:textSize="14sp"
+                    android:checked="false"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/account_ic" />
 
@@ -90,7 +91,6 @@
                     android:layout_marginLeft="32dp"
                     android:backgroundTint="@color/purple_500"
                     android:enabled="false"
-                    android:text="Jane"
                     android:textColor="@color/gray"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -116,7 +116,6 @@
                     android:layout_marginTop="4dp"
                     android:backgroundTint="@color/purple_500"
                     android:enabled="false"
-                    android:text="Doe"
                     android:textColor="@color/gray"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -142,7 +141,6 @@
                     android:layout_marginTop="4dp"
                     android:backgroundTint="@color/purple_500"
                     android:enabled="false"
-                    android:text="12/01/1985"
                     android:textColor="@color/gray"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -168,7 +166,6 @@
                     android:layout_marginTop="8dp"
                     android:backgroundTint="@color/purple_500"
                     android:enabled="false"
-                    android:text="123 Main Street, Farmingdale, NY 11735"
                     android:textColor="@color/gray"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -194,7 +191,6 @@
                     android:layout_marginTop="12dp"
                     android:backgroundTint="@color/purple_500"
                     android:enabled="false"
-                    android:text="123 456 789"
                     android:textColor="@color/gray"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -220,7 +216,6 @@
                     android:layout_marginTop="12dp"
                     android:backgroundTint="@color/purple_500"
                     android:enabled="false"
-                    android:text="(555) 123 9876"
                     android:textColor="@color/gray"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
