--- a/app/src/main/res/layout/activity_profile_vehicle.xml
+++ b/app/src/main/res/layout/activity_profile_vehicle.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="55dp"
         android:layout_marginTop="25dp"
-        android:src="@drawable/logo_01"
+        android:src="@drawable/logo3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
-        android:text="Vehicle Make"
+        android:hint="Vehicle Make"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintLeft_toLeftOf="parent"
