--- a/app/src/main/res/layout/activity_profile_insurance.xml
+++ b/app/src/main/res/layout/activity_profile_insurance.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="55dp"
         android:layout_marginTop="25dp"
-        android:src="@drawable/logo_01"
+        android:src="@drawable/logo3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
