--- a/app/src/main/res/layout/activity_final_check.xml
+++ b/app/src/main/res/layout/activity_final_check.xml
@@ -34,9 +34,9 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
                 android:text=" Final Check"
-                android:textSize="40sp"
                 android:textAlignment="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="40sp" />
 
         </RelativeLayout>
 
