--- a/app/src/main/res/layout/activity_step5.xml
+++ b/app/src/main/res/layout/activity_step5.xml
@@ -7,49 +7,31 @@
     android:background="#0F2355"
     tools:context=".Step5">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="68dp"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
+    <ImageView
+        android:id="@+id/forwardArrow4"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="226dp"
-        android:layout_marginEnd="25dp"
-        android:text="Step 2"
-        android:textSize="8sp" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="25dp"
+        android:onClick="next"
+        android:src="@drawable/ic_baseline_arrow_forward_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="68dp"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="308dp"
-        android:layout_marginEnd="25dp"
-        android:text="Step 3"
-        android:textSize="8sp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="68dp"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="391dp"
-        android:layout_marginEnd="25dp"
-        android:text="Step 4"
-        android:textSize="8sp" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="68dp"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="471dp"
-        android:layout_marginEnd="25dp"
-        android:text="Step 5"
-        android:textSize="8sp" />
+    <ImageView
+        android:id="@+id/backArrow4"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginBottom="25dp"
+        android:onClick="previous"
+        android:src="@drawable/ic_baseline_arrow_back_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <CheckBox
         android:id="@+id/checkBox5"
@@ -166,17 +148,6 @@
         android:layout_marginTop="278dp"
         android:text="Called Police, EMS, or emergency contacts" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="68dp"
-        android:layout_height="33dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="152dp"
-        android:layout_marginEnd="25dp"
-        android:text="Step 1"
-        android:textSize="8sp" />
-
     <TextView
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
@@ -196,20 +167,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
+        android:layout_marginBottom="122dp"
         android:text="Complete" />
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="373dp"
+        android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="71dp"
-        android:layout_marginEnd="-3dp"
-        android:text="Before finishing the report, let's make sure you have everything you need. If you missed a step or want to go back, click the button next to the step to go there. Otherwise, click complete to compile the report."
-        android:textColor="@color/white" />
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="37dp"
+        android:text="Before finishing, check over now to see you completed all the steps. When ready, click the complete button to generate your PDF for the report."
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 </RelativeLayout>
