--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -22,7 +22,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="900dp"
+                android:layout_height="1050dp"
                 tools:layout_editor_absoluteX="-8dp"
                 tools:layout_editor_absoluteY="0dp">
 
@@ -65,7 +65,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="40dp"
-                    android:text="ENTER YOUR INFORMATION"
+                    android:text="USER PROFILE INFORMATION"
                     android:textColor="@color/white"
                     android:textSize="22sp"
                     android:textStyle="bold"
@@ -77,8 +77,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="24dp"
-                    android:text="FIRST NAME"
+                    android:layout_marginTop="40dp"
+                    android:text="First Name"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -89,10 +89,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:backgroundTint="@color/purple_500"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="8dp"
                     android:enabled="false"
+                    android:textSize="18dp"
                     android:textColor="@color/gray"
-                    android:textSize="18sp"
+                    android:background="@drawable/rounded_corners"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/firstNameText" />
 
@@ -101,8 +103,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="16dp"
-                    android:text="LAST NAME"
+                    android:layout_marginTop="40dp"
+                    android:text="Last Name"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -113,11 +115,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="4dp"
-                    android:backgroundTint="@color/purple_500"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="8dp"
                     android:enabled="false"
+                    android:textSize="18dp"
                     android:textColor="@color/gray"
-                    android:textSize="18sp"
+                    android:background="@drawable/rounded_corners"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/lastNameText" />
 
@@ -126,8 +129,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="8dp"
-                    android:text="DATE OF BIRTH"
+                    android:layout_marginTop="40dp"
+                    android:text="Date of Birth"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -138,11 +141,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="4dp"
-                    android:backgroundTint="@color/purple_500"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="8dp"
                     android:enabled="false"
+                    android:textSize="18dp"
                     android:textColor="@color/gray"
-                    android:textSize="18sp"
+                    android:background="@drawable/rounded_corners"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/dobText" />
 
@@ -151,8 +155,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="12dp"
-                    android:text="ADDRESS"
+                    android:layout_marginTop="40dp"
+                    android:text="Address"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -163,11 +167,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
+                    android:layout_marginEnd="32dp"
                     android:layout_marginTop="8dp"
-                    android:backgroundTint="@color/purple_500"
                     android:enabled="false"
+                    android:textSize="18dp"
                     android:textColor="@color/gray"
-                    android:textSize="18sp"
+                    android:background="@drawable/rounded_corners"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/addressText" />
 
@@ -176,8 +181,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="8dp"
-                    android:text="DRIVER'S LICENSE NUMBER"
+                    android:layout_marginTop="40dp"
+                    android:text="Driver's License Number"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -188,11 +193,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="12dp"
-                    android:backgroundTint="@color/purple_500"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="8dp"
                     android:enabled="false"
+                    android:textSize="18dp"
                     android:textColor="@color/gray"
-                    android:textSize="18sp"
+                    android:background="@drawable/rounded_corners"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/licenseText" />
 
@@ -201,8 +207,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="24dp"
-                    android:text="EMERGENCY CONTACT NUMBER"
+                    android:layout_marginTop="40dp"
+                    android:text="Emergency Contact Number"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -213,20 +219,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
-                    android:layout_marginTop="12dp"
-                    android:backgroundTint="@color/purple_500"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="8dp"
                     android:enabled="false"
+                    android:textSize="18dp"
                     android:textColor="@color/gray"
-                    android:textSize="18sp"
+                    android:background="@drawable/rounded_corners"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/iceContactText" />
 
                 <Button
                     android:id="@+id/accessVehicles"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="45dp"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="40dp"
                     android:backgroundTint="@color/logo"
                     android:onClick="edit_vehicle"
                     android:text="Edit Vehicles"
@@ -235,27 +242,29 @@
 
                 <Button
                     android:id="@+id/accessInsurance"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="40dp"
                     android:layout_marginEnd="45dp"
                     android:backgroundTint="@color/logo"
                     android:onClick="edit_insurance"
                     android:text="Edit Insurance"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.862"
                     app:layout_constraintStart_toEndOf="@id/accessVehicles"
                     app:layout_constraintTop_toBottomOf="@id/iceContactEdit" />
 
                 <Button
                     android:id="@+id/save"
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="40dp"
                     android:onClick="save"
                     android:text="Save"
                     android:textSize="18dp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/accessInsurance" />
 
